# rust_jwt_auth_pg

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2019-09-23-025701_create_people/: up.sql
migrations/2019-10-22-075101_users/: up.sql
src/: db.rs  lib.rs  main.rs  models.rs
src/user/: auth.rs  mod.rs  model.rs  schema.rs
www/: Cargo.toml  index.html
www/src/: lib.rs
