[package]
name = "rusty_jwt_auth_api"
version = "0.1.0"
authors = ["pavelkrolevets <pavelkrolevets@gmail.com>"]
edition = "2019"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = "0.4.2"
rocket_codegen = "0.4.2"
rocket_contrib = "0.4.2"
serde = "1.0.82"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "1.3.3", features = ["postgres"] }
dotenv = "0.15.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.6"
jwt = "0.4.0"
rust-crypto = "0.2.36"
rustc-serialize = "0.3.24"