[package]
name = "rusty_jwt_auth_api"
version = "0.1.0"
authors = ["pavelkrolevets <pavelkrolevets@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.7"
rocket_codegen = "0.4.7"
rocket_contrib = {version = "0.4.7", default-features = false, features = ["serve", "json"]}
serde = "1.0.82"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "1.4.6", features = ["postgres", "r2d2", "uuidv07"] }
dotenv = "0.15.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.6"
jwt = "0.13.0"
rust-crypto = "0.2.36"
rustc-serialize = "0.3.24"
rust-argon2 = "0.8.2"
secstr = "0.4.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
hmac = "0.10.1"
sha2 = "0.9.3"
rocket_cors = {version = "0.5.1"}