[package]
name = "wasm_file"
version = "0.1.0"
authors = ["pavelkrolevets <pkrolevets@permission.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.73"
gloo = "0.2.1"
reqwest = "0.10.6"
json= "*"
wasm-bindgen-futures = "0.4.1"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'HtmlInputElement',
  'HtmlButtonElement'
]