[package]
name = "wasm_file"
version = "0.1.0"
authors = ["pavelkrolevets <pkrolevets@permission.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.7"
gloo = "0.2.1"
reqwest = {version = "0.11", features = ["json"]}
json= "*"
wasm-bindgen-futures = "0.4.1"
serde = { version = "1.0.101", features = ["derive"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'HtmlInputElement',
  'HtmlButtonElement'
]